Fix list alignment.

--- a/src/app/feature/versioning/versioning.component.scss
+++ b/src/app/feature/versioning/versioning.component.scss
@@ -50,14 +50,6 @@
 
     > ul {
       margin: 0.25rem 0;
-
-      ul {
-        margin-left: 1rem;
-      }
-
-      markdown {
-        text-indent: 1rem each-line;
-      }
     }
 
     > *.eop {
